tests/ui/validate_unknown_key.stderr
error: Unknown key for attribute validate
 --> $DIR/validate_unknown_key.rs:5:13
  |
5 |     #[validate(foo = "bar")]
  |                ^^^
